--- a/index.html
+++ b/index.html
@@ -24,6 +24,14 @@
 </div>
 <div style="position:absolute;left:1650px; top: 50px;border-style:single">
 	<form>
+	<input type="radio" id="p1" name="block" value="1">
+	Player 1 Start<br>
+	<input type="radio" id="p2" name="block" value="2">
+	Player 2 Start<br>
+	<input type="radio" id="p3" name="block" value="3">
+	Player 3 Start<br>
+	<input type="radio" id="p4" name="block" value="4">
+	Player 4 Start<br>
 	<input type="radio" id="air" name="block" value="0">
 	Air block<br>
 	<input type="radio" id="solid" name="block" value="10">
@@ -32,6 +40,7 @@
 	Ice block<br>
 	<input type="radio" id="kill" name="block" value="5">
 	Kill zone<br>
+	
 	</form>
 	<br>
 	<br>
@@ -83,6 +92,11 @@ blocks[0] = document.getElementById("air");
 blocks[1] = document.getElementById("solid");
 blocks[2] = document.getElementById("kill");
 blocks[3] = document.getElementById("ice");
+blocks[4] = document.getElementById("p1");
+blocks[5] = document.getElementById("p2");
+blocks[6] = document.getElementById("p3");
+blocks[7] = document.getElementById("p4");
+
 
 var collisionMap = [];
 
@@ -97,6 +111,15 @@ var LEFT = false;
 
 var mask = new Image();
 mask.src = "mask.png";
+var p1 = new Image();
+p1.src = "p1.png";
+var p2 = new Image();
+p2.src = "p2.png";
+var p3 = new Image();
+p3.src = "p3.png";
+var p4 = new Image();
+p4.src = "p4.png";
+
 
 var MAX_CHANNELs = 20;
 //audiochannels = new Array();
@@ -147,11 +170,17 @@ function drawOver(pos){
 	for(i in blocks){
 		b = blocks[i];
 		if(b.checked){
+			mapVal = collisionMap[pos[0]*30+pos[1]];
+			if(parseInt(mapVal) < 5 && parseInt(mapVal) != 0)
+				drawOverPlayer(parseInt(mapVal));
 			collisionMap[pos[0]*30+pos[1]] = b.value;
 			data.value = collisionMap.toString();
 			mapPaint(pos,b.value);
 			break;
 		}
+	}
+	if(parseInt(collisionMap[pos[0]*30+pos[1]]) >= 5 || parseInt(collisionMap[pos[0]*30+pos[1]]) == 0){
+		redrawPlayers();
 	}
 }
 
@@ -165,6 +194,38 @@ function manualChange(e){
 		collisionMap[x*30+y] = parseInt(newMap[i]);
 		mapPaint([x,y],newMap[i]);
 	}
+	redrawPlayers();
+}
+
+function redrawPlayers(){
+	p1index = collisionMap.indexOf(1);
+	p1loc = [Math.floor(p1index/30),p1index % 30];
+	
+	mapPaint(p1loc,collisionMap[p1index]);
+	
+	p2index = collisionMap.indexOf(2);
+	p2loc = [Math.floor(p2index/30),p2index % 30];
+	
+	mapPaint(p2loc,collisionMap[p2index]);
+	
+	p3index = collisionMap.indexOf(3);
+	p3loc = [Math.floor(p3index/30),p3index % 30];
+	
+	mapPaint(p3loc,collisionMap[p3index]);
+	
+	p4index = collisionMap.indexOf(4);
+	p4loc = [Math.floor(p4index/30),p4index % 30];
+	
+	mapPaint(p4loc,collisionMap[p4index]);
+}
+
+function drawOverPlayer(player){
+	pindex = collisionMap.indexOf(player);
+	ploc = [Math.floor(pindex/30),pindex % 30];
+	
+	mapPaint([ploc[0]+1,ploc[1]],collisionMap[pindex+30].toString());
+	mapPaint([ploc[0],ploc[1]+1],collisionMap[pindex+1].toString());
+	mapPaint([ploc[0]+1,ploc[1]+1],collisionMap[pindex+31].toString());
 }
 
 function mapPaint(pos,block){
@@ -188,8 +249,21 @@ function mapPaint(pos,block){
 		context.globalAlpha = .5;
 		context.fillStyle = "#00ffff";
 	}
+	if(block == "1"){
+		context.drawImage(p1,pos[0]*32,pos[1]*32);
+	}
+	else if(block == "2"){
+		context.drawImage(p2,pos[0]*32,pos[1]*32);
+	}
+	else if(block == "3"){
+		context.drawImage(p3,pos[0]*32,pos[1]*32);
+	}
+	else if(block == "4"){
+		context.drawImage(p4,pos[0]*32,pos[1]*32);
+	}
+	else
+		context.fillRect(pos[0]*32,pos[1]*32,32,32);
 	
-	context.fillRect(pos[0]*32,pos[1]*32,32,32);
 }
 
 function mouseDown(e){
