--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@ window.onload=function()
 {
   var y = document.getElementById("file-input");
   y.addEventListener('change', loadimage, false);
+  y
 }
 </script>
 
@@ -102,9 +103,15 @@ var collisionMap = [];
 
 for(x = 0; x < 50; x++){
 	for(y = 0; y < 30; y++){
-		collisionMap.push(0);
+		collisionMap.push("0");
 	}
 }
+
+var undoMap = [];
+undoMap.push(collisionMap.slice(0));
+
+var UNDO = false;
+
 
 var RIGHT = false;
 var LEFT = false;
@@ -148,6 +155,7 @@ $(canvas).mousedown(mouseDown);
 $(canvas).mouseup(mouseUp);
 $(canvas).mousemove(mouseOn);
 $(output).change(manualChange);
+$(document).keydown(keyDown);
 
 
 $(document).ready(function(){
@@ -223,9 +231,9 @@ function drawOverPlayer(player){
 	pindex = collisionMap.indexOf(player);
 	ploc = [Math.floor(pindex/30),pindex % 30];
 	
-	mapPaint([ploc[0]+1,ploc[1]],collisionMap[pindex+30].toString());
+	//mapPaint([ploc[0]+1,ploc[1]],collisionMap[pindex+30].toString());
 	mapPaint([ploc[0],ploc[1]+1],collisionMap[pindex+1].toString());
-	mapPaint([ploc[0]+1,ploc[1]+1],collisionMap[pindex+31].toString());
+	//mapPaint([ploc[0]+1,ploc[1]+1],collisionMap[pindex+31].toString());
 }
 
 function mapPaint(pos,block){
@@ -272,6 +280,31 @@ function mouseDown(e){
 
 function mouseUp(e){
 	mouse = false;
+	if(undoMap[undoMap.length-1].toString() != collisionMap.toString()){
+		undoMap.push(collisionMap.slice(0));
+		if(undoMap.length > 10)
+			undoMap = undoMap.slice(1);
+
+		console.log(undoMap.length);
+	}
+}
+
+function keyDown(e){
+	if(e.which == 90 && e.ctrlKey){
+		if(undoMap.length > 1)
+			undoMap.pop();
+		if(undoMap.length > 0){
+			collisionMap = undoMap[undoMap.length-1].slice(0);
+			console.log(collisionMap);
+			for(i in collisionMap){
+				x = Math.floor(i/30);
+				y = i % 30;
+				mapPaint([x,y],collisionMap[i]);
+			}
+			redrawPlayers();
+		}
+		console.log(undoMap.length);
+	}
 }
 
 function mouseOn(e){
